--- a/AttenceProject/Views/Login/toM.cshtml
+++ b/AttenceProject/Views/Login/toM.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="wu-header-right">
             <p><strong class="easyui-tooltip" title="2条未读消息">admin</strong>，欢迎您！</p>
-            <p><a href="#">网站首页</a>|<a href="#">支持论坛</a>|<a href="#">帮助中心</a>|<a href="#">安全退出</a></p>
+            <p><a href="#">网站首页</a>|<a href="#">支持论坛</a>|<a href="#">帮助中心</a>|<a href="../../Login/Index">安全退出</a></p>
         </div>
     </div>
     <div class="wu-sidebar" data-options="region:'west',split:true,border:true,title:'导航菜单'">
