--- a/AttenceProject/Views/SysWorkOffs/Approve.cshtml
+++ b/AttenceProject/Views/SysWorkOffs/Approve.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<AttenceProject.Models.SysOverTime>
-
+﻿
 @{
     Layout = null;
 }
@@ -46,12 +45,11 @@
 	    var applyrate = $("#Applyrate").val();
 	    var applyid = $("#ID").val();
 	    $.ajax({
-	        url: '../../SysOverTimes/SaveApprove',
+	        url: '../../SysWorkOffs/SaveApprove',
 	        data: { applystatus: applystatus, applyrate: applyrate, applyid: applyid },
 	        async: false,
 	        method: 'get',
 	        success: function (data) {
-	            
 	                $.messager.alert('信息提示', '提交成功！', 'info');
 	                $('#wu-dialog').dialog('close');
 	                window.location.reload();
@@ -134,8 +132,9 @@
 	    var row = $('#wu-datagrid').datagrid('getSelected');
 	    if (row) {
 	        var id = row.ID;
+	        //alert(id);
 	        $.ajax({
-	            url: '../../SysOverTimes/GetOverTimeInfo',
+	            url: '../../SysWorkOffs/GetWorkOffInfo',
 	            data: { id: id },
 	            async: false,
                 dataType:"json",
@@ -163,7 +162,7 @@
 	        var afterstr = "";
 	        $(".tr_after").remove();
 	        $.ajax({
-	            url: '../../SysOverTimes/GetApproveDetail',
+	            url: '../../SysWorkOffs/GetApproveDetail',
 	            data: { id: id },
 	            async:false,
 	            dataType: "json",
@@ -271,19 +270,21 @@
             </div>
             <!-- End of toolbar -->
             <table id="wu-datagrid" class="easyui-datagrid" toolbar="#wu-toolbar" title="Basic DataGrid" style="width:inherit; height:inherit"
-                   data-options="singleSelect:true,collapsible:true,url:'../../SysOverTimes/GetApprove',pagesize:3,method:'get'"
+                   data-options="singleSelect:true,collapsible:true,url:'../../SysWorkOffs/GetApprove',pagesize:3,method:'get'"
                    footer="#foot" pagination="true" rownumbers="true" singleselect="true" fitColumns="true">
                 <thead>
                     <tr>
                         <th field="ck" checkbox="true"></th>
                         <th data-options="field:'ID',width:80">ID</th>
                         <th data-options="field:'ProposerID',width:100">申请人ID</th>
-                        <th data-options="field:'StartTime',width:120,align:'right'">开始时间</th>
-                        <th data-options="field:'EndTime',width:120">结束时间</th>
-                        <th data-options="field:'Time',width:60,align:'center'">时长</th>
-                        <th data-options="field:'OverTimeType',width:80,align:'right'">加班类型</th>
-                        <th data-options="field:'Account_Method',width:120">加班结算方式</th>
-                        <th data-options="field:'OverTimeReason',width:200,align:'center'">加班原因</th>
+                        <th data-options="field:'OverTimeStart',width:120,align:'right'">加班开始时间</th>
+                        <th data-options="field:'OverTimeEnd',width:120">加班结束时间</th>
+                        <th data-options="field:'VacationStart',width:120">调休开始时间</th>
+                        <th data-options="field:'VacationEnd',width:120">调休结束时间</th>
+                        <th data-options="field:'Time',width:120">时长</th>
+                        <th data-options="field:'WorkOffType',width:120">调休类型</th>
+                        <th data-options="field:'VacationReason',width:120">调休原因</th>
+                        <th data-options="field:'Emergency',width:120">紧急联系方式</th>
                         <th data-options="field:'CopyFor',width:120">抄送人</th>
                         <th data-options="field:'ApplyStatus',width:60,align:'center'">申请状态</th>
                     </tr>
@@ -295,43 +296,69 @@
 
     <!-- Begin of easyui-dialog -->
     <div id="wu-dialog" class="easyui-dialog" data-options="closed:true,iconCls:'icon-save'" style="width:400px; padding:10px;">
-        <form id="wu-form" method="post" name="form1" action="~/SysOverTimes/SaveAdd">
+        <form id="wu-form" method="post" name="form1" action="~/SysWorkOffs/SaveAdd">
             <table>
                 <tr style="display:none;">
                     <td width="70" align="right">ID:</td>
                     <td><input type="text" name="ID" id="ID" class="wu-text" /></td>
                 </tr>
                 <tr>
-                    <td width="70" align="right">申请人ID:</td>
+                    <td width="70" align="right">调休人ID:</td>
                     <td><input type="text" name="ProposerID" disabled="disabled" class="wu-text" /></td>
                 </tr>
                 <tr>
-                    <td width="70" align="right">申请人姓名:</td>
+                    <td width="70" align="right">调休人姓名:</td>
                     <td><input type="text" name="UserName" disabled="disabled" class="wu-text" /></td>
                 </tr>
                 <tr>
-                    <td align="right" width="70">开始时间:</td>
-                    <td><input type="text" name="StartTime" disabled="disabled" class="wu-text" /></td>
+                    <td width="70" align="right">调休原因:</td>
+                    <td><input type="text" name="VacationReason"  disabled="disabled" class="wu-text" /></td>
                 </tr>
                 <tr>
-                    <td align="right" width="70">结束时间:</td>
-                    <td><input type="text" name="EndTime" disabled="disabled" class="wu-text" /></td>
+                    <td width="70" align="right">调休类型:</td>
+                    <td><input type="text" name="WorkOffType"  disabled="disabled" class="wu-text" /></td>
                 </tr>
                 <tr>
-                    <td align="right" width="70">时长:</td>
-                    <td><input type="text" name="Time" disabled="disabled" class="wu-text" /></td>
+                    <td width="70" align="right">紧急联系人:</td>
+                    <td>
+                        <input type="text" name="Emergency"  disabled="disabled" class="wu-text" />
+                    </td>
                 </tr>
                 <tr>
-                    <td align="right" width="70">加班类型:</td>
-                    <td><input type="text" name="OverTimeType" disabled="disabled" class="wu-text" /></td>
+                    <td width="70" align="right">加班开始时间:</td>
+                    <td>
+                        <input class="easyui-datetimebox" value="" disabled="disabled"  name="OverTimeStart" id="OverTimeStart" style="width:200px">
+                    </td>
                 </tr>
                 <tr>
-                    <td align="right" width="70">加班结算方式:</td>
-                    <td><input type="text" name="Account_Method" disabled="disabled" class="wu-text" /></td>
+                    <td width="70" align="right">加班结束时间:</td>
+                    <td>
+                        <input class="easyui-datetimebox" value=""  disabled="disabled" name="OverTimeEnd" id="OverTimeEnd" style="width:200px">
+                    </td>
                 </tr>
-                <tr id="tr_reason">
-                    <td align="right" width="70">加班原因:</td>
-                    <td><input type="text" name="OverTimeReason" disabled="disabled" class="wu-text" /></td>
+                <tr>
+                    <td width="70" align="right">调休开始时间:</td>
+                    <td>
+                        <input class="easyui-datetimebox" value="" disabled="disabled"  name="VacationStart" id="VacationStart" style="width:200px">
+                    </td>
+                </tr>
+                <tr>
+                    <td width="70" align="right">调休结束时间:</td>
+                    <td>
+                        <input class="easyui-datetimebox" value="" disabled="disabled"  name="VacationEnd" id="VacationEnd" style="width:200px">
+                    </td>
+                </tr>
+                <tr style="display:none">
+                    <td width="70" align="right">审批人流:</td>
+                    <td>
+                        <input type="text" value="" name="SendFor" id="SendFor" style="display:none" />
+                    </td>
+                </tr>
+                <tr style="display:none" id="tr_reason">
+                    <td width="70" align="right">抄送人流:</td>
+                    <td>
+                        <input type="text" name="CopyFor" id="CopyFor" style="display:none" />
+                    </td>
                 </tr>
                 <tr>
                     <td align="right" width="70">审批意见:</td>
